--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/main.js",
   "scripts": {
-    "start": "tsc && node build/src/index.js",
+    "start": "tsc && node build/main.js",
     "build": "tsc",
     "dev": "tsc -w",
     "ndev": "nodemon build/main.js",
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "discord.js": "^14.6.0",
+    "puppeteer": "^19.2.0",
     "sqlite3": "^5.1.2",
     "typeorm": "^0.3.10",
     "typescript": "^4.8.4"
